--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <meta charset=utf-8>
 <title>404 Page not found!</title>
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="Omni" />
 <meta property="og:title" content="404 Page not found!" />
 <meta property="og:image" content="https://i.imgur.com/GZVRLfz.png" />
@@ -39,7 +39,7 @@
             <div class=info>
                 <h1>404</h1>
                 <h2>page not found</h2>
-                <p>The page you are looking for was moved, removed, renamed or might never existed.</p><a class=btn href=https://0mniscient.github.io/>Go Home</a> <a class=btn href=https://0mniscient.github.io/BetterDiscord/>Go to Docs</a></div>
+                <p>The page you are looking for was moved, removed, renamed or might never existed.</p><a class=btn href=https://0mniscient.github.io/>Go Home</a> <a class=btn href=https://betterdocs.net/>Go to Docs</a></div>
             <!-- end Info -->
         </div>
         <div class="col-xs-12 col-lg-5 col-sm-5 text-center">
