--- a/making_plugin.html
+++ b/making_plugin.html
@@ -2,10 +2,10 @@
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="A step by step tutorial how to make a theme for BetterDiscord users" name=description>
+<meta content="A step by step tutorial how to make a plugin for BetterDiscord users" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="Omni" />
 <meta property="og:title" content="BetterDiscord Docs" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
@@ -167,7 +167,7 @@
                 <div id=toc></div>
                 <div class="alert alert-warning" role=alert><i class="fa fa-warning"></i> <b>Important: </b>Host your plugins on Github! Soon it will be required for plugins to be hosted on Github.</div>
                 <h2 id=Template>Template</h2>
-                <p>Don't care about the tutorial and is ready to start? Check out the template below and the <a href=https://0mniscient.github.io/BetterDiscord/plugin_api.html target=_blank>plugin api</a>.
+                <p>Don't care about the tutorial and is ready to start? Check out the template below and the <a href=https://betterdocs.net/plugin_api.html target=_blank>plugin api</a>.
                     <ul>
                         <li>
                             <p>Template was made by Jiiks.
@@ -246,7 +246,7 @@ MyPlugin.prototype.getAuthor = function () {
     return "Omniscient";
 };</div></pre></code>
                                                                                     <li>Now save the file and restart Discord (CTRL+R) and you will see your plugin in the settings!
-                                                                                        <li>How do you make it do things? Click <a href=https://0mniscient.github.io/BetterDiscord/plugin_api.html target=_blank>here</a> to learn the BetterDiscords plugin api.
+                                                                                        <li>How do you make it do things? Click <a href=https://betterdocs.net/plugin_api.html target=_blank>here</a> to learn the BetterDiscords plugin api.
                         </ul>
                         <h2 id=Details>Details</h2>
                         <ul>
