--- a/news_archive/index.html
+++ b/news_archive/index.html
@@ -5,17 +5,17 @@
 <meta content="The news article for BetterDiscord. Don't ever get stuck on wondering why BetterDiscord suddenly stopped working ever again!" name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <title>News</title>
-<link href=https://0mniscient.github.io/BetterDiscord/doc_files/font-awesome.min.css rel=stylesheet>
+<link href=https://betterdocs.net/doc_files/font-awesome.min.css rel=stylesheet>
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
-<link href=https://0mniscient.github.io/BetterDiscord/doc_files/modern-business.css rel=stylesheet>
-<link href=https://0mniscient.github.io/BetterDiscord/doc_files/lavish-bootstrap.css rel=stylesheet>
-<link href=https://0mniscient.github.io/BetterDiscord/doc_files/customstyles.css rel=stylesheet>
-<link href=https://0mniscient.github.io/BetterDiscord/doc_files/theme-blue.css rel=stylesheet>
+<link href=https://betterdocs.net/doc_files/modern-business.css rel=stylesheet>
+<link href=https://betterdocs.net/doc_files/lavish-bootstrap.css rel=stylesheet>
+<link href=https://betterdocs.net/doc_files/customstyles.css rel=stylesheet>
+<link href=https://betterdocs.net/doc_files/theme-blue.css rel=stylesheet>
 <link href=stylesheets/top.css rel=stylesheet media=screen>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js></script>
-<script src=https://0mniscient.github.io/BetterDiscord/doc_files/toc.js></script>
-<script src=https://0mniscient.github.io/BetterDiscord/doc_files/customscripts.js></script>
-<script src=https://0mniscient.github.io/BetterDiscord/doc_files/jquery.navgoco.min.js></script>
+<script src=https://betterdocs.net/doc_files/toc.js></script>
+<script src=https://betterdocs.net/doc_files/customscripts.js></script>
+<script src=https://betterdocs.net/doc_files/jquery.navgoco.min.js></script>
 <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -73,12 +73,12 @@
                             <input id=search-input placeholder=search...>
                             <ul id=results-container></ul>
                         </div>
-                        <script src=https://0mniscient.github.io/BetterDiscord/doc_files/jekyll-search.js></script>
+                        <script src=https://betterdocs.net/doc_files/jekyll-search.js></script>
                         <script>
                             SimpleJekyllSearch.init({
                                 searchInput: document.getElementById("search-input"),
                                 resultsContainer: document.getElementById("results-container"),
-                                dataSource: "https://0mniscient.github.io/BetterDiscord/doc_files/search.json",
+                                dataSource: "https://betterdocs.net/doc_files/search.json",
                                 searchResultTemplate: '<li><a href="{url}" title="Omni documentation">{title}</a></li>',
                                 noResultsText: "No results found.",
                                 limit: 10,
@@ -127,11 +127,11 @@
                             <h3>This year's posts</h3>
                             <ul class="this">
                                 <li>
-                                    <time>July 22</time><a href="https://0mniscient.github.io/BetterDiscord/news/07_22_2016.html">BetterDiscord Linux Beta Launch</a></li>
+                                    <time>July 22</time><a href="https://betterdocs.net/news/07_22_2016.html">BetterDiscord Linux Beta Launch</a></li>
                                 <li>
-                                    <time>July 11</time><a href="https://0mniscient.github.io/BetterDiscord/news/07_11_2016.html">BetterDiscord v0.2.81 Launch</a></li>
+                                    <time>July 11</time><a href="https://betterdocs.net/news/07_11_2016.html">BetterDiscord v0.2.81 Launch</a></li>
                                 <li>
-                                    <time>May 6</time><a href="https://0mniscient.github.io/BetterDiscord/news/05_06_2016.html">BetterDiscord v0.2.8 Launch</a></li>
+                                    <time>May 6</time><a href="https://betterdocs.net/news/05_06_2016.html">BetterDiscord v0.2.8 Launch</a></li>
                             </ul>
                         </section>
                         <hr />
