--- a/sitemap.html
+++ b/sitemap.html
@@ -95,7 +95,7 @@ font-weight:bold;
 <body>
 <div id="cont">
 <h1>HTML Site Map</h1>
-<h3><a href="https://0mniscient.github.io/BetterDiscord">Homepage</a>
+<h3><a href="https://betterdocs.net">Homepage</a>
 Last updated: 2016, July 27
 </h3>
 
@@ -108,23 +108,23 @@ Last updated: 2016, July 27
 
 <table cellpadding="0" cellspacing="0" border="0" width="100%">
 
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/index.html" title="BetterDiscord Documentation and Tutorials">BetterDiscord Documentation and Tutorials</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/" title="BetterDiscord Documentation and Tutorials">BetterDiscord Documentation and Tutorials</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/contact.html" title="Contact Us">Contact Us</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/install_win.html" title="Installing BetterDiscord on Windows">Installing BetterDiscord on Windows</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/install_mac.html" title="Installing BetterDiscord on Mac">Installing BetterDiscord on Mac</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/install_linux.html" title="Installing BetterDiscord on Linux">Installing BetterDiscord on Linux</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/plugin_api.html" title="BetterDiscord Plugin API">BetterDiscord Plugin API</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/emotes.html" title="BetterDiscord Emotes">BetterDiscord Emotes</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/theme_troubleshoot.html" title="Theme Troubleshooting">Theme Troubleshooting</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/plugin_troubleshoot.html" title="Plugin Troubleshooting">Plugin Troubleshooting</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/betterdiscord_troubleshoot.html" title="BetterDiscord Troubleshooting">BetterDiscord Troubleshooting</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/install_theme.html" title="How to install Themes">How to install Themes</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/install_plugin.html" title="How to install Plugins">How to install Plugins</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/making_theme.html" title="How to make a Theme">How to make a Theme</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/making_plugin.html" title="How to make a Plugin">How to make a Plugin</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/themes.html" title="BetterDiscord Themes Download">BetterDiscord Themes Download</a></td></tr>
-<tr><td class="lpage"><a href="https://0mniscient.github.io/BetterDiscord/plugins.html" title="BetterDiscord Plugins Download">BetterDiscord Plugins Download</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/index.html" title="BetterDiscord Documentation and Tutorials">BetterDiscord Documentation and Tutorials</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/" title="BetterDiscord Documentation and Tutorials">BetterDiscord Documentation and Tutorials</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/contact.html" title="Contact Us">Contact Us</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/install_win.html" title="Installing BetterDiscord on Windows">Installing BetterDiscord on Windows</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/install_mac.html" title="Installing BetterDiscord on Mac">Installing BetterDiscord on Mac</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/install_linux.html" title="Installing BetterDiscord on Linux">Installing BetterDiscord on Linux</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/plugin_api.html" title="BetterDiscord Plugin API">BetterDiscord Plugin API</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/emotes.html" title="BetterDiscord Emotes">BetterDiscord Emotes</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/theme_troubleshoot.html" title="Theme Troubleshooting">Theme Troubleshooting</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/plugin_troubleshoot.html" title="Plugin Troubleshooting">Plugin Troubleshooting</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/betterdiscord_troubleshoot.html" title="BetterDiscord Troubleshooting">BetterDiscord Troubleshooting</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/install_theme.html" title="How to install Themes">How to install Themes</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/install_plugin.html" title="How to install Plugins">How to install Plugins</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/making_theme.html" title="How to make a Theme">How to make a Theme</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/making_plugin.html" title="How to make a Plugin">How to make a Plugin</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/themes.html" title="BetterDiscord Themes Download">BetterDiscord Themes Download</a></td></tr>
+<tr><td class="lpage"><a href="https://betterdocs.net/plugins.html" title="BetterDiscord Plugins Download">BetterDiscord Plugins Download</a></td></tr>
 </table>
 </td>
 </tr>
