--- a/themes.html
+++ b/themes.html
@@ -7,13 +7,13 @@
 <meta content="How to install BetterDiscord on Linux to customize the world of Discord users." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
-<link rel="stylesheet" href="https://0mniscient.github.io/BetterDiscord/Stylesheets/Style.css">
+<link rel="stylesheet" href="https://betterdocs.net/Stylesheets/Style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/1/docsearch.min.css">
 <!-- Open Graph -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="Omni" />
 <meta property="og:title" content="BetterDiscord Docs" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
@@ -47,10 +47,10 @@
       <a href="/BetterDiscord" id="logo">BetterDiscord</a>
     </h1>
                 <nav id="main-nav">
-                    <a href="https://0mniscient.github.io/BetterDiscord/news/" class="main-nav-link">News</a>
-                    <a href="https://0mniscient.github.io/BetterDiscord/plugin_api.html" class="main-nav-link">API</a>
-                    <a href="https://0mniscient.github.io/BetterDiscord/themes.html" class="main-nav-link">Themes</a>
-                    <a href="https://0mniscient.github.io/BetterDiscord/plugins.html" class="main-nav-link">Plugins</a>
+                    <a href="https://betterdocs.net/news/" class="main-nav-link">News</a>
+                    <a href="https://betterdocs.net/plugin_api.html" class="main-nav-link">API</a>
+                    <a href="https://betterdocs.net/themes.html" class="main-nav-link">Themes</a>
+                    <a href="https://betterdocs.net/plugins.html" class="main-nav-link">Plugins</a>
                     <a href="https://github.com/0mniscient/" class="main-nav-link"><i class="fa fa-github-alt"></i></a>
                 </nav>
                 <div id="lang-select-wrap">
@@ -81,7 +81,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="https://0mniscient.github.io/BetterDiscord/images/Reborn.jpg" class="plugin-screenshot-img">
+                                <img src="https://betterdocs.net/images/Reborn.jpg" class="plugin-screenshot-img">
 
                                 <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -128,10 +128,10 @@
                             <div class="plugin-screenshot">
                                 <img src="https://imgur.com/apUSFCc.png" class="plugin-screenshot-img">
 
-                                <a href="https://0mniscient.github.io/BetterDiscord/install_theme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/install_theme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
                             </div>
-                            <a href="https://0mniscient.github.io/BetterDiscord/install_theme.html" class="plugin-name" target="_blank">Sleeping Beauty</a>
+                            <a href="https://betterdocs.net/install_theme.html" class="plugin-name" target="_blank">Sleeping Beauty</a>
                             <p class="plugin-desc">A soft little theme for Disney fans! </p>
                             <div class="plugin-tag-list">
 
@@ -150,10 +150,10 @@
                             <div class="plugin-screenshot">
                                 <img src="https://imgur.com/TUZpkAh.png" class="plugin-screenshot-img">
 
-                                <a href="https://0mniscient.github.io/BetterDiscord/install_theme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/install_theme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
                             </div>
-                            <a href="https://0mniscient.github.io/BetterDiscord/install_theme.html" class="plugin-name" target="_blank">Material Theme </a>
+                            <a href="https://betterdocs.net/install_theme.html" class="plugin-name" target="_blank">Material Theme </a>
                             <p class="plugin-desc">Modern and Cleaned up Discords UI and custom smooth animations.</p>
                             <div class="plugin-tag-list">
 
@@ -191,10 +191,10 @@
     <nav id="mobile-nav">
         <div id="mobile-nav-inner">
             <ul id="mobile-nav-list">
-                <a href="https://0mniscient.github.io/BetterDiscord/news/" class="mobile-nav-link">News</a>
-                <a href="https://0mniscient.github.io/BetterDiscord/plugin_api.html" class="mobile-nav-link">API</a>
-                <a href="https://0mniscient.github.io/BetterDiscord/themes.html" class="mobile-nav-link">Themes</a>
-                <a href="https://0mniscient.github.io/BetterDiscord/plugins.html" class="mobile-nav-link">Plugins</a>
+                <a href="https://betterdocs.net/news/" class="mobile-nav-link">News</a>
+                <a href="https://betterdocs.net/plugin_api.html" class="mobile-nav-link">API</a>
+                <a href="https://betterdocs.net/themes.html" class="mobile-nav-link">Themes</a>
+                <a href="https://betterdocs.net/plugins.html" class="mobile-nav-link">Plugins</a>
                 <li class="mobile-nav-item">
                     <a href="https://github.com/0mniscient/" class="mobile-nav-link" rel="external" target="_blank">GitHub</a>
                 </li>
@@ -210,7 +210,7 @@
         </div>
     </nav>
     <!-- Scripts -->
-    <script src="https://0mniscient.github.io/BetterDiscord/Scripts/main.js"></script>
+    <script src="https://betterdocs.net/Scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
 
 
