--- a/plugins.html
+++ b/plugins.html
@@ -5,7 +5,7 @@
 <meta content="A step by step tutorial how to make a theme for BetterDiscord users" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="Omni" />
 <meta property="og:title" content="BetterDiscord Docs" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
