--- a/theme_troubleshoot.html
+++ b/theme_troubleshoot.html
@@ -7,13 +7,13 @@
 <meta content="All questions that have to do with Themes are answered here! Time to make your BetterDiscord experience a whole lot better!" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
-<link rel="stylesheet" href="/BetterDiscord/Stylesheets/Style.css">
+<link rel="stylesheet" href="/Stylesheets/Style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/1/docsearch.min.css">
 <!-- Open Graph -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="Omni" />
 <meta property="og:title" content="BetterDiscord Docs" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
@@ -41,10 +41,10 @@
       <a href="/BetterDiscord" id="logo">BetterDiscord</a>
     </h1>
                 <nav id="main-nav">
-                    <a href="https://0mniscient.github.io/BetterDiscord/news/" class="main-nav-link">News</a>
-                    <a href="https://0mniscient.github.io/BetterDiscord/plugin_api.html" class="main-nav-link">API</a>
-                    <a href="https://0mniscient.github.io/BetterDiscord/themes.html" class="main-nav-link">Themes</a>
-                    <a href="https://0mniscient.github.io/BetterDiscord/plugins.html" class="main-nav-link">Plugins</a>
+                    <a href="https://betterdocs.net/news/" class="main-nav-link">News</a>
+                    <a href="https://betterdocs.net/plugin_api.html" class="main-nav-link">API</a>
+                    <a href="https://betterdocs.net/themes.html" class="main-nav-link">Themes</a>
+                    <a href="https://betterdocs.net/plugins.html" class="main-nav-link">Plugins</a>
                     <a href="https://github.com/0mniscient/" class="main-nav-link"><i class="fa fa-github-alt"></i></a>
                 </nav>
                 <div id="lang-select-wrap">
@@ -118,7 +118,7 @@
 
                                         </div>
                                         <footer class="article-footer">
-                                            <a href="/BetterDiscord/plugin_troubleshoot.html" class="article-footer-next" title="Plugin Troubleshoot"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                            <a href="/plugin_troubleshoot.html" class="article-footer-next" title="Plugin Troubleshoot"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                         </footer>
 
                                         </div>
@@ -145,26 +145,26 @@
                     <aside id="sidebar" role="navigation">
                         <div class="inner">
                             <strong class="sidebar-title">Getting Started</strong>
-                            <a href="/BetterDiscord/" class="sidebar-link">Overview</a>
+                            <a href="/" class="sidebar-link">Overview</a>
                             <strong class="sidebar-title">Installation</strong>
-                            <a href="/BetterDiscord/install_win.html" class="sidebar-link">Windows</a>
-                            <a href="/BetterDiscord/install_mac.html" class="sidebar-link">Mac</a>
-                            <a href="/BetterDiscord/install_linux.html" class="sidebar-link">Linux</a>
+                            <a href="/install_win.html" class="sidebar-link">Windows</a>
+                            <a href="/install_mac.html" class="sidebar-link">Mac</a>
+                            <a href="/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
-                            <a href="/BetterDiscord/plugin_api.html" class="sidebar-link">Plugin API</a>
+                            <a href="/plugin_api.html" class="sidebar-link">Plugin API</a>
                             <a href=/BetterDiscord/emotes.html class="sidebar-link">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
-                            <a href="/BetterDiscord/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
-                            <a href="/BetterDiscord/theme_troubleshoot.html" class="sidebar-link current">Themes</a>
-                            <a href="/BetterDiscord/plugin_troubleshoot.html" class="sidebar-link">Plugins</a>
+                            <a href="/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
+                            <a href="/theme_troubleshoot.html" class="sidebar-link current">Themes</a>
+                            <a href="/plugin_troubleshoot.html" class="sidebar-link">Plugins</a>
                             <strong class="sidebar-title">Guides</strong>
-                            <a href="/BetterDiscord/install_theme.html" class="sidebar-link">Installing Theme</a>
-                            <a href="/BetterDiscord/install_plugin.html" class="sidebar-link">Installing Plugin</a>
-                            <a href="/BetterDiscord/making_theme.html" class="sidebar-link">Making Theme</a>
-                            <a href="/BetterDiscord/making_plugin.html" class="sidebar-link">Making Plugin</a>
+                            <a href="/install_theme.html" class="sidebar-link">Installing Theme</a>
+                            <a href="/install_plugin.html" class="sidebar-link">Installing Plugin</a>
+                            <a href="/making_theme.html" class="sidebar-link">Making Theme</a>
+                            <a href="/making_plugin.html" class="sidebar-link">Making Plugin</a>
                             <strong class="sidebar-title">Downloads</strong>
-                            <a href="/BetterDiscord/themes.html" class="sidebar-link">Themes</a>
-                            <a href="/BetterDiscord/plugins.html" class="sidebar-link">Plugins</a>
+                            <a href="/themes.html" class="sidebar-link">Themes</a>
+                            <a href="/plugins.html" class="sidebar-link">Plugins</a>
                         </div>
                     </aside>
                     </div>
@@ -188,36 +188,36 @@
             <nav id="mobile-nav">
                 <div id="mobile-nav-inner">
                     <ul id="mobile-nav-list">
-                        <a href="https://0mniscient.github.io/BetterDiscord/news/" class="mobile-nav-link">News</a>
-                        <a href="https://0mniscient.github.io/BetterDiscord/plugin_api.html" class="mobile-nav-link">API</a>
-                        <a href="https://0mniscient.github.io/BetterDiscord/themes.html" class="mobile-nav-link">Themes</a>
-                        <a href="https://0mniscient.github.io/BetterDiscord/plugins.html" class="mobile-nav-link">Plugins</a>
+                        <a href="https://betterdocs.net/news/" class="mobile-nav-link">News</a>
+                        <a href="https://betterdocs.net/plugin_api.html" class="mobile-nav-link">API</a>
+                        <a href="https://betterdocs.net/themes.html" class="mobile-nav-link">Themes</a>
+                        <a href="https://betterdocs.net/plugins.html" class="mobile-nav-link">Plugins</a>
                         <li class="mobile-nav-item">
                             <a href="https://github.com/0mniscient/" class="mobile-nav-link" rel="external" target="_blank">GitHub</a>
                         </li>
                     </ul>
 
                   <strong class="mobile-nav-title">Getting Started</strong>
-                    <a href="/BetterDiscord/" class="mobile-nav-link">Overview</a>
+                    <a href="/" class="mobile-nav-link">Overview</a>
                   <strong class="mobile-nav-title">Installation</strong>
-                    <a href="/BetterDiscord/install_win.html" class="mobile-nav-link">Windows</a>
-                    <a href="/BetterDiscord/mac_win.html" class="mobile-nav-link">Mac</a>
-                    <a href="/BetterDiscord/linux_win.html" class="mobile-nav-link">Linux</a>
+                    <a href="/install_win.html" class="mobile-nav-link">Windows</a>
+                    <a href="/mac_win.html" class="mobile-nav-link">Mac</a>
+                    <a href="/linux_win.html" class="mobile-nav-link">Linux</a>
                   <strong class="mobile-nav-title">How to use</strong>
-                    <a href="/BetterDiscord/plugin_api.html" class="mobile-nav-link">Plugin API</a>
-                    <a href="/BetterDiscord/emotes.html" class="mobile-nav-link">Emotes</a>
+                    <a href="/plugin_api.html" class="mobile-nav-link">Plugin API</a>
+                    <a href="/emotes.html" class="mobile-nav-link">Emotes</a>
                   <strong class="mobile-nav-title">Troubleshooting</strong>
-                    <a href="/BetterDiscord/betterdiscord_troubleshoot.html" class="mobile-nav-link">BetterDiscord</a>
-                    <a href="/BetterDiscord/theme_troubleshoot.html" class="mobile-nav-link current">Themes</a>
-                    <a href="/BetterDiscord/plugin_troubleshoot.html" class="mobile-nav-link">Plugins</a>
+                    <a href="/betterdiscord_troubleshoot.html" class="mobile-nav-link">BetterDiscord</a>
+                    <a href="/theme_troubleshoot.html" class="mobile-nav-link current">Themes</a>
+                    <a href="/plugin_troubleshoot.html" class="mobile-nav-link">Plugins</a>
                   <strong class="mobile-nav-title">Guides</strong>
-                    <a href="/BetterDiscord/install_theme.html" class="mobile-nav-link">Installing Themes</a>
-                    <a href="/BetterDiscord/install_plugin.html" class="mobile-nav-link">Installing Plugins</a>
-                    <a href="/BetterDiscord/making_theme.html" class="mobile-nav-link">Making Theme</a>
-                    <a href="/BetterDiscord/making_plugin.html" class="mobile-nav-link">Making Plugin</a>
+                    <a href="/install_theme.html" class="mobile-nav-link">Installing Themes</a>
+                    <a href="/install_plugin.html" class="mobile-nav-link">Installing Plugins</a>
+                    <a href="/making_theme.html" class="mobile-nav-link">Making Theme</a>
+                    <a href="/making_plugin.html" class="mobile-nav-link">Making Plugin</a>
                     <strong class="mobile-nav-title">Downloads</strong>
-                      <a href="/BetterDiscord/themes.html" class="mobile-nav-link">Themes</a>
-                      <a href="/BetterDiscord/plugins.html" class="mobile-nav-link">Plugins</a>
+                      <a href="/themes.html" class="mobile-nav-link">Themes</a>
+                      <a href="/plugins.html" class="mobile-nav-link">Plugins</a>
 
                 </div>
                 <div id="mobile-lang-select-wrap">
@@ -230,7 +230,7 @@
                 </div>
             </nav>
             <!-- Scripts -->
-            <script src="/BetterDiscord/Scripts/main.js"></script>
+            <script src="/Scripts/main.js"></script>
             <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
 
             <!-- Algolia -->
