--- a/install_win.html
+++ b/install_win.html
@@ -38,7 +38,7 @@
         <header id="header" class="wrapper">
             <div id="header-inner" class="inner">
                 <h1 id="logo-wrap">
-      <a href="/BetterDiscord" id="logo">BetterDiscord</a>
+      <a href="https://betterdocs.net/" id="logo">BetterDiscord</a>
     </h1>
                 <nav id="main-nav">
                     <a href="https://betterdocs.net/news/" class="main-nav-link">News</a>
