--- a/betterdiscord_troubleshoot.html
+++ b/betterdiscord_troubleshoot.html
@@ -110,7 +110,7 @@
 
                                         </div>
                                         <footer class="article-footer">
-                                            <a href="/theme_troubleshoot.html" class="article-footer-next" title="Installation"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                            <a href="/theme_troubleshoot.html" class="article-footer-next" title="Theme Troubleshoot"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                         </footer>
 
                                         </div>
