--- a/emotes.html
+++ b/emotes.html
@@ -130,7 +130,7 @@
 
                                         </div>
                                         <footer class="article-footer">
-                                            <a href="/betterdiscord_troubleshoot.html" class="article-footer-next" title="Installation"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                            <a href="/betterdiscord_troubleshoot.html" class="article-footer-next" title="BetterDiscord Troubleshoot"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                         </footer>
 
                                         </div>
