--- a/plugin_api.html
+++ b/plugin_api.html
@@ -131,7 +131,7 @@
 
                                         </div>
                                         <footer class="article-footer">
-                                            <a href="/emotes.html" class="article-footer-next" title="Installation"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                            <a href="/emotes.html" class="article-footer-next" title="Emotes"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                         </footer>
 
                                         </div>
