--- a/install_linux.html
+++ b/install_linux.html
@@ -101,7 +101,7 @@ it would be
 
                                         </div>
                                         <footer class="article-footer">
-                                            <a href="/plugin_api.html" class="article-footer-next" title="Installation"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                            <a href="/plugin_api.html" class="article-footer-next" title="Plugin API"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                         </footer>
 
                                         </div>
