--- a/install_mac.html
+++ b/install_mac.html
@@ -90,7 +90,7 @@
 
                                         </div>
                                         <footer class="article-footer">
-                                            <a href="/install_linux.html" class="article-footer-next" title="Installation"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                            <a href="/install_linux.html" class="article-footer-next" title="Linux Installation"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                         </footer>
 
                                         </div>
