--- a/install_win.html
+++ b/install_win.html
@@ -91,7 +91,7 @@
 
                                         </div>
                                         <footer class="article-footer">
-                                            <a href="/install_mac.html" class="article-footer-next" title="Installation"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                            <a href="/install_mac.html" class="article-footer-next" title="Mac Installation"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                         </footer>
 
                                         </div>
