--- a/install_mac.html
+++ b/install_mac.html
@@ -131,7 +131,7 @@
                             <a href="/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
                             <a href="/plugin_api.html" class="sidebar-link">Plugin API</a>
-                            <a href=/BetterDiscord/emotes.html class="sidebar-link">Emotes</a>
+                            <a href=/emotes.html class="sidebar-link">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
                             <a href="/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
                             <a href="/theme_troubleshoot.html" class="sidebar-link">Themes</a>
@@ -180,8 +180,8 @@
             <a href="/" class="mobile-nav-link">Overview</a>
             <strong class="mobile-nav-title">Installation</strong>
             <a href="/install_win.html" class="mobile-nav-link">Windows</a>
-            <a href="/mac_win.html" class="mobile-nav-link current">Mac</a>
-            <a href="/linux_win.html" class="mobile-nav-link">Linux</a>
+            <a href="/install_mac.html" class="mobile-nav-link current">Mac</a>
+            <a href="/install_linux.html" class="mobile-nav-link">Linux</a>
             <strong class="mobile-nav-title">How to use</strong>
             <a href="/plugin_api.html" class="mobile-nav-link">Plugin API</a>
             <a href="/emotes.html" class="mobile-nav-link">Emotes</a>
