--- a/making_plugin.html
+++ b/making_plugin.html
@@ -257,8 +257,8 @@ return "Omniscient";
                 <a href="index.html" class="mobile-nav-link">Overview</a>
                 <strong class="mobile-nav-title">Installation</strong>
                 <a href="https://betterdocs.net/install_win.html" class="mobile-nav-link">Windows</a>
-                <a href="https://betterdocs.net/mac_win.html" class="mobile-nav-link">Mac</a>
-                <a href="https://betterdocs.net/linux_win.html" class="mobile-nav-link">Linux</a>
+                <a href="https://betterdocs.net/install_mac.html" class="mobile-nav-link">Mac</a>
+                <a href="https://betterdocs.net/install_linux.html" class="mobile-nav-link">Linux</a>
                 <strong class="mobile-nav-title">How to use</strong>
                 <a href="https://betterdocs.net/plugin_api.html" class="mobile-nav-link">Plugin API</a>
                 <a href="https://betterdocs.net/emotes.html" class="mobile-nav-link">Emotes</a>
