--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,11 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="container topnavlinks">
         <div class=navbar-header>
-            <button class=navbar-toggle data-target=#bs-example-navbar-collapse-1 data-toggle=collapse type=button><span class=sr-only>Toggle navigation</span> <span class=icon-bar></span> <span class=icon-bar></span> <span class=icon-bar></span></button> <a href=/BetterDiscord/ class="fa fa-home fa-lg navbar-brand"><span class=projectTitle> Omni Docs</span></a></div>
+            <button class=navbar-toggle data-target=#bs-example-navbar-collapse-1 data-toggle=collapse type=button><span class=sr-only>Toggle navigation</span> <span class=icon-bar></span> <span class=icon-bar></span> <span class=icon-bar></span></button> <a href=/ class="fa fa-home fa-lg navbar-brand"><span class=projectTitle> Omni Docs</span></a></div>
         <div class="collapse navbar-collapse" id=bs-example-navbar-collapse-1>
             <ul class="nav navbar-nav navbar-right">
                 <!-- entries without drop-downs appear here -->
-                <li><a href=/BetterDiscord/news>News</a></li>
+                <li><a href=/news>News</a></li>
                 <!-- entries with drop-downs appear here -->
                 <!-- conditional logic to control which topnav appears for the audience defined in the configuration file.-->
                 <li class=dropdown><a href=# class=dropdown-toggle data-toggle=dropdown>Helpful Resources<b class=caret></b></a>
@@ -69,7 +69,7 @@
                         <li><a href=https://github.com/0mniscient/Discord-Themes target=_blank>Github Repo</a>
                             <li><a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd target=_blank>Support Server</a>
                                 <li><a href=https://discordapp.com/ target=_blank>DiscordApp</a>
-                                    <li><a href=/BetterDiscord/contact.html>Contact</a></ul>
+                                    <li><a href=/contact.html>Contact</a></ul>
                     </li>
                     <!--comment out this block if you want to hide search-->
                     <li>
