--- a/install_theme.html
+++ b/install_theme.html
@@ -129,7 +129,7 @@ Mac: ~/Library/Preferences/BetterDiscord/themes</code></pre></div>make sure the 
                             <a href="/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
                             <a href="/plugin_api.html" class="sidebar-link">Plugin API</a>
-                            <a href=/BetterDiscord/emotes.html class="sidebar-link">Emotes</a>
+                            <a href=/emotes.html class="sidebar-link">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
                             <a href="/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
                             <a href="/theme_troubleshoot.html" class="sidebar-link">Themes</a>
@@ -178,8 +178,8 @@ Mac: ~/Library/Preferences/BetterDiscord/themes</code></pre></div>make sure the 
             <a href="/" class="mobile-nav-link">Overview</a>
             <strong class="mobile-nav-title">Installation</strong>
             <a href="/install_win.html" class="mobile-nav-link">Windows</a>
-            <a href="/mac_win.html" class="mobile-nav-link">Mac</a>
-            <a href="/linux_win.html" class="mobile-nav-link">Linux</a>
+            <a href="/install_mac.html" class="mobile-nav-link">Mac</a>
+            <a href="/install_linux.html" class="mobile-nav-link">Linux</a>
             <strong class="mobile-nav-title">How to use</strong>
             <a href="/plugin_api.html" class="mobile-nav-link">Plugin API</a>
             <a href="/emotes.html" class="mobile-nav-link">Emotes</a>
