--- a/themes.html
+++ b/themes.html
@@ -84,7 +84,7 @@
                             <div class="plugin-screenshot">
                                 <img src="https://betterdocs.net/images/Reborn.jpg" class="plugin-screenshot-img">
 
-                                <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/images/Reborn.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
                             </div>
                             <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" class="plugin-name" target="_blank">Discord Reborn</a>
@@ -107,7 +107,7 @@
                             <div class="plugin-screenshot">
                                 <img src="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="plugin-screenshot-img">
 
-                                <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
                             </div>
                             <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" class="plugin-name" target="_blank">Dark Matter</a>
@@ -129,10 +129,10 @@
                             <div class="plugin-screenshot">
                                 <img src="https://imgur.com/apUSFCc.png" class="plugin-screenshot-img">
 
-                                <a href="https://betterdocs.net/install_theme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://imgur.com/apUSFCc.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
                             </div>
-                            <a href="https://betterdocs.net/install_theme.html" class="plugin-name" target="_blank">Sleeping Beauty</a>
+                            <a href="https://github.com/mrmaple240/Sleeping-Beauty" class="plugin-name" target="_blank">Sleeping Beauty</a>
                             <p class="plugin-desc">A soft little theme for Disney fans! </p>
                             <div class="plugin-tag-list">
 
@@ -151,10 +151,10 @@
                             <div class="plugin-screenshot">
                                 <img src="https://imgur.com/TUZpkAh.png" class="plugin-screenshot-img">
 
-                                <a href="https://betterdocs.net/install_theme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://imgur.com/TUZpkAh.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
                             </div>
-                            <a href="https://betterdocs.net/install_theme.html" class="plugin-name" target="_blank">Material Theme </a>
+                            <a href="https://github.com/BeardDesign1/Material-design-theme/tree/themes" class="plugin-name" target="_blank">Material Theme</a>
                             <p class="plugin-desc">Modern and Cleaned up Discords UI and custom smooth animations.</p>
                             <div class="plugin-tag-list">
 
