--- a/plugins.html
+++ b/plugins.html
@@ -74,7 +74,7 @@
                 <div class="inner">
                     <header id="plugin-list-header">
                         <h1 id="plugin-list-title">Plugins</h1>
-                        <a href="https://github.com/0mniscient/BetterDiscord/edit/gh-pages/plugins.html" class="add-pencil" title="Add Plugin"><i class="fa fa-pencil"></i></a>
+                        <a href="https://github.com/0mniscient/BetterDiscord/edit/gh-pages/plugins.html" class="add-pencil" title="Add Plugin"><i class="fa fa-plus"></i></a>
                         <input type="search" id="plugin-search-input" placeholder="Search">
                         <div id="plugin-list-count">7 items</div>
                     </header>
