--- a/themes.html
+++ b/themes.html
@@ -74,7 +74,7 @@
                 <div class="inner">
                     <header id="plugin-list-header">
                         <h1 id="plugin-list-title">Themes</h1>
-                        <a href="https://github.com/0mniscient/BetterDiscord/edit/gh-pages/themes.html" class="add-pencil" title="Add Theme"><i class="fa fa-pencil"></i></a>
+                        <a href="https://github.com/0mniscient/BetterDiscord/edit/gh-pages/themes.html" class="add-pencil" title="Add Theme"><i class="fa fa-plus"></i></a>
                         <input type="search" id="plugin-search-input" placeholder="Search">
                         <div id="plugin-list-count">4 items</div>
                     </header>
