--- a/emotes.html
+++ b/emotes.html
@@ -7,7 +7,7 @@
 <meta content="Learn how to use the BetterDiscord emotes and there modifiers! Shake,spin,flip and flap all your emotes, make them come alive! Favorite all your best emotes to have them on the tip of your fingers." name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
-<link rel="stylesheet" href="/Stylesheets/Style.css">
+<link rel="stylesheet" href="/stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -250,7 +250,7 @@
         </div>
     </nav>
     <!-- Scripts -->
-    <script src="/Scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
 
 
