--- a/making_plugin.html
+++ b/making_plugin.html
@@ -7,7 +7,7 @@
 <meta content="A step by step tutorial how to make a plugin for BetterDiscord users" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
-<link rel="stylesheet" href="https://betterdocs.net/Stylesheets/Style.css">
+<link rel="stylesheet" href="https://betterdocs.net/stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -286,7 +286,7 @@ return "Omniscient";
             </div>
         </nav>
         <!-- Scripts -->
-        <script src="https://betterdocs.net/Scripts/main.js"></script>
+        <script src="https://betterdocs.net/scripts/main.js"></script>
         <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
 
 
