--- a/plugin_api.html
+++ b/plugin_api.html
@@ -7,7 +7,7 @@
 <meta content="How to use BetterDiscords plugin API to make plugin for our community." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
-<link rel="stylesheet" href="/Stylesheets/Style.css">
+<link rel="stylesheet" href="/stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -243,7 +243,7 @@
         </div>
     </nav>
     <!-- Scripts -->
-    <script src="/Scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
 
 
