--- a/plugins.html
+++ b/plugins.html
@@ -7,7 +7,7 @@
 <meta content="How to install BetterDiscord on Linux to customize the world of Discord users." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
-<link rel="stylesheet" href="https://betterdocs.net/Stylesheets/Style.css">
+<link rel="stylesheet" href="https://betterdocs.net/stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -224,7 +224,7 @@
         </div>
     </nav>
     <!-- Scripts -->
-    <script src="https://betterdocs.net/Scripts/main.js"></script>
+    <script src="https://betterdocs.net/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
     <script>
         $(window).load(function() {
